# skill-inspector

./: .gitignore  .impeccable.md  README.md  SKILL.md  index.html  pyproject.toml
docs/: pure-skill-notes.md
docs/superpowers/plans/: 2026-04-16-report-paper-columns.md
docs/superpowers/specs/: 2026-04-16-report-paper-columns-design.md
evals/: evals.json
evals/darwin/: results.tsv  skill-inspector-test-prompts.json
examples/: sample-input.md  sample-report.json  sample_generic_skill.md
prompts/: insights.md  translation.md  workflow-generation.md
scripts/: build-report-draft.mjs  build-report-overlay-template.mjs  finalize-report.mjs  normalize-skill.mjs  output-paths.mjs  render-report.mjs  skill_inspector.py
skill-inspector/skill-inspector-current/: normalized-source.json  report.draft.json  report.html  report.json  report.overlay.template.json
skill_inspector/: analyze.py  fetch.py  install_probe.py  llm_assist.py  models.py  normalize.py  render.py
templates/: report.example.json  report.html  report.html.j2  report.overlay.example.json  report.schema.json
tests/: build-report-draft.test.mjs  build-report-overlay-template.test.mjs  finalize-report.test.mjs  normalize-skill.test.mjs  render-report.test.mjs  test_analyze.py  test_cli.py  test_fetch.py  test_llm_assist.py  test_normalize.py  test_render.py
tests/fixtures/: pasted_skill.md  web_skill.html
