[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-inspector"
version = "0.1.0"
description = "Analyze generic skills and render static HTML reports"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "jinja2>=3.1,<4",
  "PyYAML>=6,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<10",
]
